# libspatialindex

./: CMakeLists.txt  Point.cpp  README.md  callSpatialLibrary.cpp  callSpatialLibrary.h  main.cpp
massif_profiling/: massif
